product description is added

--- a/flohmarkt-app/src/pages/Shop/shop.css
+++ b/flohmarkt-app/src/pages/Shop/shop.css
@@ -1,30 +1,37 @@
+.shop {
+    background: rgb(224,238,174);
+    background: linear-gradient(0deg, rgba(224,238,174,1) 2%, rgba(255,255,255,1) 100%);
+}
+
+
 .head {
     font-family: 'Bagel Fat One', cursive;
-    color: rgb(255, 98, 0);
-    font-size: 100px;
+    color: rgb(177, 130, 182);
+    background: transparent;
+    font-size: 150px;
     font-weight: 200;
 }
 
 .head:hover {
     cursor: url('./magicalwand.png'), auto;
-    transform: scale(1.1);
-    transition: 0.3s ease-in-out;
+    
 }
 
 .shopTitle {
     margin-top: 100px;
     text-align: center;
     font-size: 40px;
-  }
-  .products {
+}
+
+.products {
     width: 100%;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     place-items: center;
-  }
+}
   
-  .product {
+.product {
     border-radius: 15px;
     width: 300px;
     height: 350px;
@@ -33,23 +40,41 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  
-  .product img {
+}
+
+p {
+    margin-bottom: 4px;
+}
+
+
+.product img {
     width: 300px;
-  }
+    background: transparent
+}
   
-  .product .description {
+.product .description .name {
     text-align: center;
-  }
+    font-family: 'Didact Gothic', sans-serif;
+    font-weight: 100;
+    color: rgb(65, 65, 65);
+    
+}
+
+.product .description .price {
+    text-align: center;
+    font-family: 'Didact Gothic', sans-serif;
+    font-weight: 600;
+    color: rgb(64, 64, 64);
+    margin-top: 0;
+}
   
-  .product:hover {
+.product img:hover {
     transition: 0.3s ease-in;
     cursor: url('./magicalwand.png'), auto;
-    transform: scale(1.1);
-  }
+    transform: scale(1.08);
+}
   
-  .addToCartBttn {
+.addToCartBttn {
     background-color: transparent;
     border: 2px solid rgb(19, 19, 19);
     min-width: 100px;
@@ -58,11 +83,11 @@
     padding-top: 5px;
     padding-bottom: 5px;
     border-radius: 15px;
-  }
+}
   
-  .addToCartBttn:hover {
+.addToCartBttn:hover {
     background-color: rgb(19, 19, 19);
     color: white;
     cursor: auto;
-  }
+}
 
