--- a/flohmarkt-app/src/components/Navbar.css
+++ b/flohmarkt-app/src/components/Navbar.css
@@ -1,10 +1,9 @@
 .navbar {
     width: 100%;
-    height: 80px;
-    background-color: rgb(255, 255, 255);
+    height: 80px;    
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: nowrap;
+    padding: 10px;
 }
   
 .links {
