--- a/flohmarkt-app/src/components/Navbar.css
+++ b/flohmarkt-app/src/components/Navbar.css
@@ -1,20 +1,13 @@
 .navbar {
-    width: 100%;
-    height: 80px;    
-    display: flex;
-    flex-wrap: nowrap;
-    padding: 10px;
+    height: 80px;
+    font-family: 'Bagel Fat One', cursive;
+    font-size: 22px;
+    display:flex;
+    justify-content:right;
+    
 }
-  
 .links {
-    margin-right: 50px;
-    display: flex;
-    align-items: center;
-}
-  
-.links a {
-    text-decoration: none;
-    color: rgb(66, 106, 192);
-    margin-left: 20px;
-    font-size: 25px;
+    padding: 20px;
+    color: aliceblue;
+    
 }
