footer on progress

--- a/flohmarkt-app/src/components/Footer.css
+++ b/flohmarkt-app/src/components/Footer.css
@@ -1,4 +1,8 @@
 .footer {
     width: inherit;
-    height: 200px;
+    height: 220px;
+    color: rgb(23, 116, 198); 
+    background-color: rgb(255, 255, 255);
+    
 }
+
