--- a/flohmarkt-app/src/App.css
+++ b/flohmarkt-app/src/App.css
@@ -2,8 +2,10 @@
   text-align: center;
   justify-content: center;
   display: block;
-  border: solid rgb(44, 44, 44) 4px;
-  background: linear-gradient(20deg, rebeccapurple, transparent), url(https://grainy-gradients.vercel.app/noise.svg); 
+  
+  background-color: #FBDA61;
+  background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
+
     
 }
 
