--- a/flohmarkt-app/src/components/Footer.css
+++ b/flohmarkt-app/src/components/Footer.css
@@ -1,8 +1,36 @@
 .footer {
     width: inherit;
-    height: 220px;
-    color: rgb(23, 116, 198); 
+    height: 80px;
     background-color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    font-family: 'Inconsolata', monospace;
+    padding: 20px;
+    background: transparent;
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 40px;
+}
+
+.social {
     
+    color: rgb(255, 255, 255);
+    margin-top: 20px;
+    font-size: larger;
+
+}
+
+.social:hover {
+    
+    color: rgb(234, 64, 191);
+    margin-top: 20px;
+    font-size: larger;
+
+}
+
+p {
+    margin-top: 20px;
+    color: rgba(255, 255, 255, 0.694);
 }
 
