--- a/flohmarkt-app/src/components/Navbar.css
+++ b/flohmarkt-app/src/components/Navbar.css
@@ -3,29 +3,30 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    padding: 30px 10%;
-    
+    padding: 30px 8%;
+    margin-top: 0;
 }
 
-a {
-    color: #ffffff;
+div a {
+   text-decoration: none;
+   color: #ffffff;
+}
+
+div a:hover {
     text-decoration: none;
-}
-
-a:hover {
-    color: rgb(253, 216, 70);
+    color: #FBDA61;
 }
 
 .links {
-    margin-top: 60px;
+    margin-top: 80px;
     margin-bottom: 0%;
-    font-size: 28px;
+    font-size: 24px;
     justify-content: space-between;
     font-family: 'Inconsolata', monospace;
     display: inline-block;
+    color: #ffffff;
 
 }
-
 
 
 .code {
@@ -39,8 +40,60 @@ a:hover {
   font-size: 80px;
   text-shadow: -6px -6px #2e2e2e;
   color: #ffffff;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 0%;
   display: flex;
   justify-content: center;
+}
+
+#scroll-container {
+    background-color: #2e2e2e;
+    color: white;
+    font-family: 'Inconsolata', monospace;
+    font-size: 24px; 
+    font-weight: bold;
+    text-align: center;
+    mix-blend-mode: multiply;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+    
+    
+  
+#scroll-text {
+    text-align: right;
+  
+    /* animation properties */
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    
+    -moz-animation: my-animation 15s linear infinite;
+    -webkit-animation: my-animation 15s linear infinite;
+    animation: my-animation 15s linear infinite;
+}
+  
+  /* for Firefox */
+@-moz-keyframes my-animation {
+    from { -moz-transform: translateX(-100%); }
+    to { -moz-transform: translateX(100%); }
+}
+  
+  /* for Chrome */
+@-webkit-keyframes my-animation {
+    from { -webkit-transform: translateX(-100%); }
+    to { -webkit-transform: translateX(100%); }
+}
+  
+@keyframes my-animation {
+    from {
+      -moz-transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+      transform: translateX(-100%);
+    }
+    to {
+      -moz-transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%);
+    }
 }
