--- a/flohmarkt-app/src/pages/Contact/Contact.css
+++ b/flohmarkt-app/src/pages/Contact/Contact.css
@@ -11,7 +11,7 @@
     cursor: pointer;
     display: inline-block;
     font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
     line-height: 20px;
     margin: 0 5px 10px 0;
@@ -70,13 +70,16 @@ textarea {
 }
 
 form {
+    margin-top: 30px;
     padding-top: 20px;
     padding-bottom: 40px;
     width: 400px;
+    margin-left: 35%;
     position: relative;
     display: inline-block;
-    background-color: rgba(240, 248, 255, 0.365);
+    background-color: rgba(240, 248, 255, 0.2);
     border-radius: 4px;
+    
 }
 
 
@@ -121,4 +124,14 @@ label {
       margin-bottom: 50px;
       
     }
+}
+
+.contactform {
+    text-align: center;
+    justify-content: center;
+    display: block;
+}
+
+textarea {
+    resize: none;
 }
