--- a/flohmarkt-app/src/pages/Shop/shop.css
+++ b/flohmarkt-app/src/pages/Shop/shop.css
@@ -1,7 +1,3 @@
-
-
-
-
 .button-50 {
   appearance: button;
   background-color: #2e2e2e;
@@ -14,7 +10,7 @@
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
+  font-size: 11px;
   font-weight: 400;
   line-height: 20px;
   margin: 0 5px 10px 0;
@@ -68,11 +64,11 @@
   
 }
 
-div img {
+div .pic {
   width: 250px;
 }
 
-div img:hover {
+div .pic:hover {
   transition: 0.3s ease-in;
   transform: scale(1.05);
   cursor: grabbing;
@@ -93,8 +89,77 @@ div img:hover {
 }
 
 .arrow-up {
-  height: 80px;
-  background-color: #2e2e2e;
-  color: #fff;
+  margin-right: -1200px;
+  width: 45px;
+  position: sticky;
+  background-color: #ffffff46;
+  padding: 1%;
+}
+
+
+.shoppage {
+  text-align: center;
+  justify-content: center;
+  display: block;
   
+}
+
+.arrow-up:hover {
+  background-color: rgb(253, 216, 70);
+  
+}
+
+
+
+
+#scroll-container {
+  background-color: rgb(12, 12, 12);
+  color: white;
+  font-family: 'Inconsolata', monospace;
+  font-size: 24px; 
+  font-weight: bold;
+  text-align: center;
+  mix-blend-mode: multiply;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+  
+  
+
+#scroll-text {
+  text-align: right;
+
+  /* animation properties */
+  -moz-transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  
+  -moz-animation: my-animation 15s linear infinite;
+  -webkit-animation: my-animation 15s linear infinite;
+  animation: my-animation 15s linear infinite;
+}
+
+/* for Firefox */
+@-moz-keyframes my-animation {
+  from { -moz-transform: translateX(-100%); }
+  to { -moz-transform: translateX(100%); }
+}
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+  from { -webkit-transform: translateX(-100%); }
+  to { -webkit-transform: translateX(100%); }
+}
+
+@keyframes my-animation {
+  from {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  to {
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
 }
