--- a/flohmarkt-app/src/components/Navbar.css
+++ b/flohmarkt-app/src/components/Navbar.css
@@ -28,7 +28,16 @@ div a:hover {
 
 }
 
+a#cart {
+    position: relative;
+    top: 3px;
+  
+}
 
+a#contact {
+    position: relative;
+    left: -33px;
+}
 .code {
     background-color: rgba(255, 255, 255, 0.453);
     height: 60px;
@@ -56,6 +65,7 @@ div a:hover {
     mix-blend-mode: multiply;
     padding-top: 3px;
     padding-bottom: 3px;
+    position: sticky;
 }
     
     
