--- a/flohmarkt-app/src/pages/Cart/cart.css
+++ b/flohmarkt-app/src/pages/Cart/cart.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Inconsolata', monospace;
 }
   
 .cartItem {
