--- a/flohmarkt-app/src/pages/Cart/cart.css
+++ b/flohmarkt-app/src/pages/Cart/cart.css
@@ -4,6 +4,14 @@
     justify-content: center;
     align-items: center;
     font-family: 'Inconsolata', monospace;
+    font-size: 18px;
+    font-weight: 40;
+    margin: 20px;
+    margin-bottom: 4px;
+    color:rgba(23, 23, 23, 0.867);
+    
+    text-align: left;
+    margin-left: 0;
 }
   
 .cartItem {
@@ -13,12 +21,12 @@
   
     align-items: center;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 25px;
+    border-radius: 5px;
     margin: 30px;
 }
   
 .cartItem img {
-    width: 200px;
+    width: 150px;
 }
   
 .cartItem .description {
@@ -38,7 +46,7 @@
     background-color: rgb(19, 19, 19);
     color: white;
     border: none;
-    border-radius: 8px;
+    border-radius: 2px;
     margin: 10px;
     cursor: pointer;
 }
