--- a/flohmarkt-app/src/pages/Cart/cart.css
+++ b/flohmarkt-app/src/pages/Cart/cart.css
@@ -9,8 +9,9 @@
     margin: 20px;
     margin-bottom: 4px;
     color:rgba(23, 23, 23, 0.867);
-    
-    
+    text-align: left;
+    margin-left: 0;
+
 }
   
 .cartItem {
