--- a/flohmarkt-app/src/pages/Shop/shop.css
+++ b/flohmarkt-app/src/pages/Shop/shop.css
@@ -101,7 +101,7 @@ div .pic:hover {
   text-align: center;
   justify-content: center;
   display: block;
-  
+  height: 0%;
 }
 
 .arrow-up:hover {
