--- a/flohmarkt-app/src/pages/Contact/Contact.css
+++ b/flohmarkt-app/src/pages/Contact/Contact.css
@@ -121,3 +121,12 @@ label {
     }
 }
 
+.contactform {
+    text-align: center;
+    justify-content: center;
+    display: block;
+}
+
+textarea {
+    resize: none;
+}
