--- a/flohmarkt-app/src/pages/Shop/ScrollToTop.css
+++ b/flohmarkt-app/src/pages/Shop/ScrollToTop.css
@@ -3,7 +3,7 @@
     bottom: 80px;
     font-size: 4rem;
     cursor: pointer;
-    color: white;
+    color: rgb(26, 205, 59);
     right: 2%;
     background: none;
     padding: 0px;
