--- a/flohmarkt-app/src/App.css
+++ b/flohmarkt-app/src/App.css
@@ -1,13 +1,10 @@
 .App {
-  
-  background-color: #FBDA61;
-  background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
-
-    
+  background-color: white;
 }
 
 
   
   
-
-
+body {
+  margin: 0;
+}
