--- a/flohmarkt-app/src/components/Footer.css
+++ b/flohmarkt-app/src/components/Footer.css
@@ -1,21 +1,18 @@
 .footer {
     width: inherit;
-    height: 80px;
-    background-color: rgb(255, 255, 255);
+    height: 120px;
+    background-color: rgb(121, 203, 35);
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     font-family: 'Inconsolata', monospace;
-    padding: 20px;
-    background: transparent;
-    margin-left: 60px;
-    margin-right: 60px;
-    margin-top: 40px;
+    padding: 30px 8%;
+    margin-top: 0;
 }
 
 .social {
     
-    color: rgb(255, 255, 255);
+    color: rgb(200, 51, 51);
     margin-top: 20px;
     font-size: larger;
 
@@ -31,6 +28,6 @@
 
 p {
     margin-top: 20px;
-    color: rgba(255, 255, 255, 0.694);
+    color: rgba(236, 42, 42, 0.694);
 }
 
