--- a/flohmarkt-app/src/components/Navbar.css
+++ b/flohmarkt-app/src/components/Navbar.css
@@ -1,6 +1,5 @@
 .navbar {
     font-size: 22px;
-    display: flex;
     justify-content: space-between;
     align-items: start;
     padding: 30px 8%;
@@ -8,8 +7,9 @@
 }
 
 div a {
-   text-decoration: none;
-   color: #ffffff;
+    text-decoration: none;
+    color: #1d1d1d;
+    position: inherit;
 }
 
 div a:hover {
@@ -18,92 +18,31 @@ div a:hover {
 }
 
 .links {
-    margin-top: 80px;
+    margin-top: 40px;
     margin-bottom: 0%;
-    font-size: 24px;
+    font-size: 45px;
+    font-family: 'Konstant Grotesk', sans-serif; 
+    display: flex;
     justify-content: space-between;
-    font-family: 'Inconsolata', monospace;
-    display: inline-block;
-    color: #ffffff;
-
+    align-items: baseline;  
+    position: relative;                                  
 }
-
-a#cart {
-    position: relative;
-    top: 3px;
-  
-}
-
-a#contact {
-    position: relative;
-    left: -33px;
-}
-.code {
-    background-color: rgba(255, 255, 255, 0.453);
-    height: 60px;
-    box-sizing: border-box;
-}
-
-.logo {
-  font-family: 'Bagel Fat One', cursive;
-  font-size: 80px;
-  text-shadow: -6px -6px #2e2e2e;
-  color: #ffffff;
-  margin-top: 50px;
-  margin-bottom: 0%;
-  display: flex;
-  justify-content: center;
-}
-
-#scroll-container {
+    
+.promocode {
+    display: inline;
     background-color: #2e2e2e;
+    font-family: 'Konstant Grotesk', sans-serif;
+    justify-content: center;
     color: white;
-    font-family: 'Inconsolata', monospace;
-    font-size: 24px; 
-    font-weight: bold;
-    text-align: center;
-    mix-blend-mode: multiply;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    position: sticky;
-}
+    margin: 29%;
+    position: relative;
+    top: 18%;
+    transform: translateY(-50%);
     
+}
+
+#promo-bar {
+    background-color: #2e2e2e;
+    height: 30px;
     
-  
-#scroll-text {
-    text-align: right;
-  
-    /* animation properties */
-    -moz-transform: translateX(-100%);
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-    
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
-}
-  
-  /* for Firefox */
-@-moz-keyframes my-animation {
-    from { -moz-transform: translateX(-100%); }
-    to { -moz-transform: translateX(100%); }
-}
-  
-  /* for Chrome */
-@-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(-100%); }
-    to { -webkit-transform: translateX(100%); }
-}
-  
-@keyframes my-animation {
-    from {
-      -moz-transform: translateX(-100%);
-      -webkit-transform: translateX(-100%);
-      transform: translateX(-100%);
-    }
-    to {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
-    }
 }
