--- a/flohmarkt-app/src/pages/Cart/cart.css
+++ b/flohmarkt-app/src/pages/Cart/cart.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Konstant Grotesk', sans-serif;                                           
     font-size: 18px;
     font-weight: 40;
     margin: 20px;
@@ -33,8 +33,7 @@
   
 .cartItem .description {
     width: 100%;
-    font-size: 30px;
-    
+    font-size: 30px;    
 }
   
 .countHandler input {
