--- a/flohmarkt-app/src/components/Footer.css
+++ b/flohmarkt-app/src/components/Footer.css
@@ -1,19 +1,20 @@
 .footer {
     width: inherit;
-    height: 120px;
-    background-color: rgb(121, 203, 35);
+    height: 320px;
+    background: #B8D261;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Konstant Grotesk', sans-serif;
+    
     padding: 30px 8%;
     margin-top: 0;
 }
 
 .social {
     
-    color: rgb(200, 51, 51);
-    margin-top: 20px;
+    color: rgb(43, 43, 43);
+    margin-top: 290px;
     font-size: larger;
 
 }
@@ -28,6 +29,10 @@
 
 p {
     margin-top: 20px;
-    color: rgba(236, 42, 42, 0.694);
+    color: rgb(43, 43, 43);
 }
 
+.footerimg {
+    margin-bottom: -300px;
+    width: 100%;
+}
