--- a/flohmarkt-app/src/components/Navbar.css
+++ b/flohmarkt-app/src/components/Navbar.css
@@ -4,11 +4,18 @@
     align-items: start;
     padding: 30px 8%;
     margin-top: 0;
+    background: linear-gradient(180deg, rgba(165, 201, 63, 0.85) 0%, rgba(255, 157, 11, 0.33) 67.71%, rgba(255, 157, 11, 0.00) 96.35%);
+    height: 600px;
 }
+
+.pitems {
+   height: 200px;
+}
+
 
 div a {
     text-decoration: none;
-    color: #1d1d1d;
+    color: rgb(43, 43, 43);
     position: inherit;
 }
 
@@ -30,7 +37,6 @@ div a:hover {
     
 .promocode {
     display: inline;
-    background-color: #2e2e2e;
     font-family: 'Konstant Grotesk', sans-serif;
     justify-content: center;
     color: white;
@@ -42,7 +48,8 @@ div a:hover {
 }
 
 #promo-bar {
-    background-color: #2e2e2e;
+    background-color: rgb(43, 43, 43);
     height: 30px;
     
 }
+
