--- a/flohmarkt-app/src/pages/Shop/shop.css
+++ b/flohmarkt-app/src/pages/Shop/shop.css
@@ -46,6 +46,7 @@
   place-items: center;
   flex-wrap: wrap;
   
+  
 }
 
 div .pic {
@@ -92,4 +93,33 @@ div .pic:hover {
 .headerimg {
   margin-top: -500px;
   width: 80%;
+}
+
+.shopheader {
+  width: 90%;
+}
+
+.startshoppingbutton {
+  font-family: "Open Sans", sans-serif;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.4em 0.7em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 60px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+div.item {
+  margin-bottom: 100px;
 }
