--- a/flohmarkt-app/src/pages/Contact/Contact.css
+++ b/flohmarkt-app/src/pages/Contact/Contact.css
@@ -1,62 +1,18 @@
-.button {
-    display: flex;
-    appearance: button;
-    background-color: #000;
-    background-image: none;
-    border: 1px solid #000;
-    border-radius: 4px;
-    box-shadow: #fff 4px 4px 0 0,#212121 4px 4px 0 1px;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 20px;
-    margin: 0 5px 10px 0;
-    overflow: visible;
-    padding: 6px 24px;
-    text-align: center;
-    text-transform: none;
-    touch-action: manipulation;
-    user-select: none;
-    -webkit-user-select: none;
-    vertical-align: middle;
-    white-space: nowrap;
-    margin-bottom: 30px;
-    margin-top: 30px;
-}
-  
-.button:hover {
-    text-decoration: none;
-    background-color: rgb(253, 128, 70);
-    border-color: rgb(253, 128, 70);
-}
-  
-.button:active {
-    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
-    outline: 0;
-}
-  
-.button:not([disabled]):active {
-    box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
-    transform: translate(2px, 2px);
-}
+
 
 input  {
   width: 300px;
   height: 30px;
-  border-color: transparent;
-  border-radius: 2px;
   
+  border-radius: 2px;
+  border: black solid 2px;
 }
 
 textarea {
   width: 300px;
   height: 100px;
-  border-color: transparent;
-  border-radius: 2px;
+  
+  border: rgb(0, 0, 0) solid 2px;
   
 }
 
@@ -67,7 +23,7 @@ textarea {
 }
 
 form {
-    margin-top: 30px;
+    margin-top: -400px;
     padding-top: 20px;
     padding-bottom: 40px;
     width: 400px;
@@ -75,7 +31,7 @@ form {
     position: relative;
     display: inline-block;
     background-color: rgba(240, 248, 255, 0.2);
-    border-radius: 4px;
+    border: black solid 4px;
     
 }
 
@@ -96,31 +52,6 @@ label {
 }
 
 
-.button:hover {
-    text-decoration: none;
-    background-color: rgb(253, 216, 70);
-    border-color: rgb(253, 216, 70);
-    color: #2e2e2e;
-}
-  
-.button:active {
-    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
-    outline: 0;
-}
-  
-.button:not([disabled]):active {
-    box-shadow: #fff 2px 2px 0 0, #2e2e2e 2px 2px 0 1px;
-    transform: translate(2px, 2px);
-}
-  
-@media (min-width: 600px) {
-    .button-50 {
-      padding: 6px 22px;
-      margin-bottom: 50px;
-      
-    }
-}
-
 .contactform {
     text-align: center;
     justify-content: center;
@@ -129,4 +60,40 @@ label {
 
 textarea {
     resize: none;
+    margin-bottom: 40px;
+}
+
+
+.submitbutton {
+    font-family: "Open Sans", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.4em 0.7em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    position: relative;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    
+    
+}
+  
+.submitbutton:hover {
+  
+  
+}
+  
+.submitbutton:active {
+    box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+    outline: 0;
+}
+  
+.submitbutton:not([disabled]):active {
+    box-shadow: 0px 0px 0px 0px;
+    top: 5px;
+    left: 5px;
 }
