--- a/flohmarkt-app/src/pages/Cart/cart.css
+++ b/flohmarkt-app/src/pages/Cart/cart.css
@@ -1,4 +1,4 @@
-.cart {
+.cartheader {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,12 +6,18 @@
     font-family: 'Konstant Grotesk', sans-serif;                                           
     font-size: 18px;
     font-weight: 40;
-    margin: 20px;
-    margin-bottom: 4px;
+    margin-top: -400px;
     color:rgba(23, 23, 23, 0.867);
     text-align: left;
-    margin-left: 0;
+    text-decoration: underline;
+    
+}
 
+.cart {
+
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
 }
   
 .cartItem {
@@ -19,9 +25,6 @@
     height: 250px;
     display: flex;
     align-items: center;
-    background-color: rgba(240, 248, 255, 0.2);
-    border-radius: 4px;
-    border-radius: 5px;
     margin: 30px;
     margin-top: 0;
 }
@@ -29,11 +32,14 @@
 .cartItem img {
     width: 150px;
     margin-left: 50px;
+    margin-right: 50px;
 }
   
 .cartItem .description {
     width: 100%;
-    font-size: 30px;    
+    font-size: 30px; 
+    font-family: 'Konstant Grotesk', sans-serif;                                           
+    font-size: 24px;   
 }
   
 .countHandler input {
@@ -72,35 +78,32 @@
 
 
 .checkout button {
-
-   
-  background-color: #2e2e2e;
-  background-image: none;
-  border: 1px solid #2e2e2e;
-  border-radius: 4px;
-  box-shadow: #fff 4px 4px 0 0, #2e2e2e 4px 4px 0 1px;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 11px;
-  font-weight: 400;
-  line-height: 20px;
-  margin: 0 15px 8px 0;
-  overflow: visible;
-  padding: 12px 40px;
-  text-align: center;
-  touch-action: manipulation;
-  user-select: none;
-  -webkit-user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-
+    font-family: "Open Sans", sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+    border: 3px solid;
+    padding: 0.4em 0.7em;
+    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 
 }
 
-.checkout button:hover {
+
+.buttons:not(<p>) {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 80px;
+    padding: 10px 20%;
+    margin-top: 0;
+    
+}
+
+.checkoutbutton:hover {
     text-decoration: none;
     background-color: rgb(253, 216, 70);
     border-color:rgb(253, 216, 70);
@@ -113,25 +116,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;                                        
+    font-size: 24px;   
 }
 
-.promocode {
+.promocodebar {
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-bottom: 10px;
-    margin-left: 140px;
-    width: 140px;
-}
-
-
-h1 {
-    display: flex;
     align-items: center;
-    color: white;
-    font-size: xx-large;
-    margin-top: 100px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 120px;
+    border: #2e2e2e solid 2px;
+    height: 20px;
 }
+
+.code {
+   display: grid;
+   grid-template-rows: 1fr;  
+   justify-content: center;
+   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;                                        
+    font-size: 24px;   
+    margin-bottom: 10px;
+}
+
+
 
 .button {
     font-family: "Open Sans", sans-serif;
@@ -164,4 +174,43 @@ h1 {
     box-shadow: 0px 0px 0px 0px;
     top: 5px;
     left: 5px;
+}
+
+
+
+.sadface {
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.emptytext {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    font-family: 'Konstant Grotesk', sans-serif;                                           
+    font-size: 26px;
+    margin-bottom: 20px;
+}
+
+.buttons .discount {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.applybutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.payorshop {
+    display: grid;
+    grid-template-columns: 1fr 1fr ;
 }
