grid system fixed

--- a/flohmarkt-app/src/pages/Shop/shop.css
+++ b/flohmarkt-app/src/pages/Shop/shop.css
@@ -42,9 +42,9 @@
   width: 100%;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   place-items: center;
-  flex-wrap: wrap;
+  
   
   
 }
